replace tokio with async-std (reworking PR #20)
This allows this library to run in other runtimes (not only tokio).

This is PR re-implementation #20 with fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ err-derive = "0.2.1"
 futures-core = "0.3.1"
 futures-util = "0.3.1"
 async-stream = "0.2.0"
-tokio = { version = "0.2.4", features = ["time", "udp", "stream"] }
+async-std = { version = "1.7.0", features = ["unstable"] }
 
 [dev-dependencies]
-tokio = { version = "0.2.4", features = ["macros", "rt-core"] }
+async-std = { version = "1.7.0", features = ["attributes"] }
